--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.6.2",
+    "typescript": "^4.0.2"
   }
 }
